--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
 
     <div class="contact-info">
       <a href="mailto:shreyasaxena2104@gmail.com" class="btn contact-btn" target="_blank">📧 Email Me</a>
+      <p>Email: <!--email_off-->22f3001013@ds.study.iitm.ac.in<!--/email_off--></p>
       <a href="tel:8791566820" class="btn contact-btn">📞 Call: 8791566820</a>
       <span class="location">📍 Dehradun, India</span>
     </div>
